k8s_kind/analytics-service/analytics-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: analytics-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      serviceAccountName: sa-gke
      containers:
        - name: analytics-service
          image: analytics-service:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            periodSeconds: 15
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            periodSeconds: 15
            initialDelaySeconds: 30
          ports:
            - containerPort: 8005
          resources:
            requests:
              cpu: 20m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 512Mi
