k8s_kind/analytics-service/analytics-service-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: analytics-ns
spec:
  type: ClusterIP
  selector:
    app: analytics-service
  ports:
    - port: 80
      targetPort: 8005
