k8s_kind/analytics-service/analytics-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: analytics-netpol
  namespace: analytics-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
